compiler/tools/fpp-check/test/state_machine_instance/bad_priority.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine_instance/bad_priority.fpp:6.43
  state machine instance s1: M.S priority "abc"
                                          ^
error: cannot convert string to a numeric type
